--- a/final-words.adoc
+++ b/final-words.adoc
@@ -4,7 +4,7 @@
 :leveloffset: 0
 
 == Final Words
-ifndef::imagesdir[:imagesdir: ../img]
+ifndef::imagesdir[:imagesdir: img]
 
 === Achievement Unlocked!
 
